--- a/TD_IV.html
+++ b/TD_IV.html
@@ -8,24 +8,250 @@
 <body>
 <form onsubmit="return false">
     <div>
-
+        <input type="submit" value="Commencer" onclick="Schema()">
+    </div>
+    <div>
+        <span class="dott"></span>
+        <span class="dott"></span>
+        <span class="dott"></span>
+        <span class="dott"></span>
+    </div>
+    <div class="table">
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
+        <div class="line">
+            <div class="indice">
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="jeu">
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+                <span class="dott"></span>
+            </div>
+        </div>
     </div>
     <div class="choice">
-        <button value="1" id="blue" class="blue"></button>
-        <button value="2" id="black" class="black"></button>
-        <button value="3" id="green" class="green"></button>
-        <button value="4" id="yellow" class="yellow"></button>
-        <button value="5" id="red" class="red"></button>
-        <button value="6" id="white" class="white"></button>
+        <button value="0" id="blue" class="blue"></button>
+        <button value="1" id="black" class="black"></button>
+        <button value="2" id="green" class="green"></button>
+        <button value="3" id="yellow" class="yellow"></button>
+        <button value="4" id="red" class="red"></button>
+        <button value="5" id="white" class="white"></button>
+    </div>
+    <div>
+        <p>Drag color</p>>
+
+        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <br>
+        <img id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
     </div>
 </form>
 <footer>
     <div>
-        <p>TD_III > Pierre, Feuille, Ciseux by Jimmy L., Anthony B., Clément N., Axel P.</p>
+        <p>TD_IV > Mastermind by Jimmy L., Anthony B., Clément N., Axel P.</p>
     </div>
 </footer>
 </body>
 <script>
+    var schema = [];
 
+    function Schema() {
+        schema = [];
+        for (i=0; i<4; i++){
+            n = Math.round(Math.random() * 5);
+            schema.push(n);
+        }
+    }
+
+    function allowDrop(ev) {
+        ev.preventDefault();
+    }
+
+    function drag(ev) {
+        ev.dataTransfer.setData("text", ev.target.id);
+    }
+
+    function drop(ev) {
+        ev.preventDefault();
+        var data = ev.dataTransfer.getData("text");
+        ev.target.appendChild(document.getElementById(data));
+    }
+
+
+
+    // 0 = BLUE
+    // 1 = BLACK
+    // 2 = GREEN
+    // 3 = YELLOW
+    // 4 = RED
+    // 5 = WHITE
 </script>
 </html>
