--- a/TD_I.html
+++ b/TD_I.html
@@ -13,41 +13,40 @@
 </footer>
 </body>
 <script>
-    let exoB;
-    exoB = 42;
+    let exoB = 42;
+
     switch (typeof exoB) {
         case ('string'):
             console.log("C'est une chaîne de caractères");
             break;
         case ('boolean'):
-            console.log(typeof exoB);
+            console.log("C'est un boolean");
             break;
         case ('number'):
-            console.log(typeof exoB);
+            console.log("C'est un nombre");
             break;
         default:
+            console.log("C'est quelque chose d'autre");
             break;
     }
     
     let i = 0;
-    while(i<=9){
+    while(i <= 9) {
         console.log(i);
-        ++i;
+        i++;
     }
 
     let exoD = 42;
+
     function isEven(exoD) {
-        if(typeof exoD !== 'number'){
-            exoD = -1;
-            return (exoD);
+        if(exoD % 2 === 0){
+            return 1;
         }
-        else if(exoD % 2 == 0){
-            exoD = 0;
-            return (exoD);
+        else if(exoD % 2 === 1){
+            return 0;
         }
-        else if(exoD % 2 != 0){
-            exoD = 1;
-            return (exoD);
+        else {
+            return -1;
         }
     }
     console.log(isEven(exoD));
@@ -55,14 +54,14 @@
     let exoE_A = 30;
     let exoE_B = 32;
     function compareA_B(exoE_A, exoE_B) {
-        if (typeof exoE_A !== 'number'){
+        if (typeof exoE_A !== "number" || typeof exoE_B !== "number"){
             return "error";
-        }else if(exoE_A < exoE_B){
-            return "-1";
-        }else if(exoE_A == exoE_B){
-            return "0";
-        }else if(exoE_A > exoE_B){
-            return "1";
+        } else if(exoE_A < exoE_B){
+            return -1;
+        } else if(exoE_A === exoE_B){
+            return 0;
+        } else if(exoE_A > exoE_B){
+            return 1;
         }
     }
     console.log(compareA_B(exoE_A, exoE_B));
