--- a/TD_IV.html
+++ b/TD_IV.html
@@ -17,7 +17,7 @@
         <span class="dott" id="sch4"></span>
     </div>
     <div class="table">
-        <div class="line">
+        <div class="line" id="l10">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -28,14 +28,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add10">
+                <span class="dott drag10"></span>
+                <span class="dott drag10"></span>
+                <span class="dott drag10"></span>
+                <span class="dott drag10"></span>
+                <input id="conf10" type="submit" value="Confirmer" onclick="confirm(10)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l9">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -46,14 +47,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add9">
+                <span class="dott drag9"></span>
+                <span class="dott drag9"></span>
+                <span class="dott drag9"></span>
+                <span class="dott drag9"></span>
+                <input id="conf9" type="submit" value="Confirmer" onclick="confirm(9)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l8">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -64,14 +66,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add8">
+                <span class="dott drag8"></span>
+                <span class="dott drag8"></span>
+                <span class="dott drag8"></span>
+                <span class="dott drag8"></span>
+                <input id="conf8" type="submit" value="Confirmer" onclick="confirm(8)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l7">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -82,14 +85,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add7">
+                <span class="dott drag7"></span>
+                <span class="dott drag7"></span>
+                <span class="dott drag7"></span>
+                <span class="dott drag7"></span>
+                <input id="conf7" type="submit" value="Confirmer" onclick="confirm(7)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l6">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -100,14 +104,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add6">
+                <span class="dott drag6"></span>
+                <span class="dott drag6"></span>
+                <span class="dott drag6"></span>
+                <span class="dott drag6"></span>
+                <input id="conf6" type="submit" value="Confirmer" onclick="confirm(6)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l5">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -118,14 +123,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add5">
+                <span class="dott drag5"></span>
+                <span class="dott drag5"></span>
+                <span class="dott drag5"></span>
+                <span class="dott drag5"></span>
+                <input id="conf5" type="submit" value="Confirmer" onclick="confirm(5)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l4">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -136,14 +142,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add4">
+                <span class="dott drag4"></span>
+                <span class="dott drag4"></span>
+                <span class="dott drag4"></span>
+                <span class="dott drag4"></span>
+                <input id="conf4" type="submit" value="Confirmer" onclick="confirm(4)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l3">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -154,14 +161,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add3">
+                <span class="dott drag3"></span>
+                <span class="dott drag3"></span>
+                <span class="dott drag3"></span>
+                <span class="dott drag3"></span>
+                <input id="conf3" type="submit" value="Confirmer" onclick="confirm(3)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l2">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -172,14 +180,15 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
-                <span class="dott"></span>
+            <div class="jeu" id="add2">
+                <span class="dott drag2"></span>
+                <span class="dott drag2"></span>
+                <span class="dott drag2"></span>
+                <span class="dott drag2"></span>
+                <input id="conf2" type="submit" value="Confirmer" onclick="confirm(2)" style="visibility: hidden">
             </div>
         </div>
-        <div class="line">
+        <div class="line" id="l1">
             <div class="indice">
                 <div>
                     <span class="dot"></span>
@@ -190,23 +199,23 @@
                     <span class="dot"></span>
                 </div>
             </div>
-            <div class="jeu">
-                <span class="dott" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
-                <span class="dott" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
-                <span class="dott" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
-                <span class="dott" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
-                <input type="submit" value="Confirmer" onclick="">
+            <div class="jeu" id="add1">
+                <span class="dott drag1" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
+                <span class="dott drag1" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
+                <span class="dott drag1" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
+                <span class="dott drag1" ondrop="drop(event)" ondragover="allowDrop(event)" ondragend="DelImg(event)"></span>
+                <input id="conf1" type="submit" value="Confirmer" onclick="confirm(1)" style="visibility: visible">
             </div>
         </div>
     </div>
     <div class="choice">
         <div id="newimg">
-            <img id="blue1" src="image/blue.png" draggable="true" ondragstart="drag(event),NewImage('blue', 'blue.png')" width="50" height="50">
-            <img id="black1" src="image/black.jpg" draggable="true" ondragstart="drag(event),NewImage('black', 'black.jpg')" width="50" height="50">
-            <img id="green1" src="image/green.png" draggable="true" ondragstart="drag(event),NewImage('green', 'green.png')" width="50" height="50">
-            <img id="yellow1" src="image/yellow.png" draggable="true" ondragstart="drag(event),NewImage('yellow', 'yellow.png')" width="50" height="50">
-            <img id="red1" src="image/red.png" draggable="true" ondragstart="drag(event),NewImage('red', 'red.png')" width="50" height="50">
-            <img id="purple1" src="image/purple.png" draggable="true" ondragstart="drag(event),NewImage('purple', 'purple.png')" width="50" height="50">
+            <img id="blue1" src="image/blue.png" name="0" draggable="true" ondragstart="drag(event),NewImage('blue', 'blue.png')" width="50" height="50">
+            <img id="black1" src="image/black.jpg" name="1" draggable="true" ondragstart="drag(event),NewImage('black', 'black.jpg')" width="50" height="50">
+            <img id="green1" src="image/green.png" name="2" draggable="true" ondragstart="drag(event),NewImage('green', 'green.png')" width="50" height="50">
+            <img id="yellow1" src="image/yellow.png" name="3" draggable="true" ondragstart="drag(event),NewImage('yellow', 'yellow.png')" width="50" height="50">
+            <img id="red1" src="image/red.png" name="4" draggable="true" ondragstart="drag(event),NewImage('red', 'red.png')" width="50" height="50">
+            <img id="purple1" src="image/purple.png" name="5" draggable="true" ondragstart="drag(event),NewImage('purple', 'purple.png')" width="50" height="50">
         </div>
     </div>
 </form>
@@ -230,6 +239,25 @@
         }
     }
 
+    function confirm(manche) {
+        drag = manche;
+        m = manche+1;
+        manche = "conf"+manche;
+        next = "conf"+m;
+        document.getElementById(manche).style.visibility = "hidden";
+        if (manche != "conf10"){
+            document.getElementById(next).style.visibility = "visible";
+        }
+        NewLine(drag);
+    }
+
+    function NewLine(drag){
+        drag = "drag"+drag;
+        document.getElementsByClassName(drag).setAttribute("ondrop", "drop(event");
+        document.getElementsByClassName(drag).setAttribute("ondragover", "allowDrop(event)");
+        document.getElementsByClassName(drag).setAttribute("ondragend", "DelImg(event)");
+    }
+
     var i = 2;
 
     function DelImg(ev) {
@@ -241,7 +269,7 @@
         var img = document.createElement("img");
         img.setAttribute("id", color+i);
         img.setAttribute("draggable", "true");
-        img.setAttribute("ondragstart", "drag(event),NewImage()");
+        img.setAttribute("ondragstart", "drag(event),NewImage("+color, file+");
         img.setAttribute("width", "50");
         img.setAttribute("height", "50");
         img.src = "image/"+file;
