--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -5,9 +5,11 @@
     <title>Clicker</title>
 </head>
 <body>
-
-</body>
-<scrip>
+<form onsubmit="return false">
     
-</scrip>
+</form>
+</body>
+<script>
+
+</script>
 </html>
