--- a/TD_IV.html
+++ b/TD_IV.html
@@ -240,7 +240,7 @@
     }
 
     function confirm(manche) {
-        drag = manche;
+        dragend = manche;
         m = manche+1;
         manche = "conf"+manche;
         next = "conf"+m;
@@ -248,7 +248,7 @@
         if (manche != "conf10"){
             document.getElementById(next).style.visibility = "visible";
         }
-        NewLine(drag);
+        NewLine(dragend);
     }
 
     function NewLine(drag){
@@ -269,7 +269,7 @@
         var img = document.createElement("img");
         img.setAttribute("id", color+i);
         img.setAttribute("draggable", "true");
-        img.setAttribute("ondragstart", "drag(event),NewImage("+color, file+");
+        img.setAttribute("ondragstart", "drag(event), NewImage("+color+", "+file+")");
         img.setAttribute("width", "50");
         img.setAttribute("height", "50");
         img.src = "image/"+file;
