add click incrementation

--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -124,6 +124,7 @@
     }
 
     function clickImg(){
+        click++;
         score += (add * mult * multipre);
         document.getElementById("score").innerHTML = score;
         if (click == 1){
