Place skin select

--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -23,6 +23,17 @@
                 <input type="submit" value="Begin" onclick="Begin()">
                 <input type="submit" value="Recommencer" onclick="">
             </div>
+            <div>
+                <label for="skin">Choose your skin : </label>
+                <select name="skin" id="skin">
+                    <option id="">--Choose your skin--</option>
+                    <option value="Nijifuwatchi">Nijifuwatchi</option>
+                    <option value="Yumemitchi">Yumemitchi</option>
+                    <option value="Mametchi">Mametchi</option>
+                    <option value="Chamametchi">Chamametchi</option>
+                </select>
+                <input type="submit" value="Change Skin" onclick="Skin()">
+            </div>
         </div>
         <p id="check">...</p>
     </div>
@@ -45,20 +56,9 @@
         <button onclick="">Auto-Clicker Rank.3</button>
     </div>
 </div>
-<form onsubmit="return false">
-    <label for="skin">Choose your skin : </label>
-    <select name="skin" id="skin">
-        <option id="">--Choose your skin--</option>
-        <option value="Nijifuwatchi">Nijifuwatchi</option>
-        <option value="Yumemitchi">Yumemitchi</option>
-        <option value="Mametchi">Mametchi</option>
-        <option value="Chamametchi">Chamametchi</option>
-    </select>
-    <input type="submit" value="Change Skin" onclick="Skin()">
-</form>
 <footer>
     <div>
-        <p>Coding Dojo > Clicker by Jimmy L., Anthony B., Clément N., Axel P.</p>
+        <p>Coding Dojo > Tama Clicker by Jimmy L., Anthony B., Clément N., Axel P.</p>
     </div>
 </footer>
 </body>
