Skin background correction

--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -240,7 +240,7 @@
         if (strUser == "Nijifuwatchi"){
             document.getElementById("tama").setAttribute("src", "img/tama.png")
         }else if (strUser == "Yumemitchi"){
-            document.getElementById("tama").setAttribute("src", "img/tama2.jpeg")
+            document.getElementById("tama").setAttribute("src", "img/tama2.png")
         }else if (strUser == "Mametchi"){
             document.getElementById("tama").setAttribute("src", "img/tama3.png")
         }else if (strUser == "Chamametchi"){
